add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
# LDC: exclude "Hello World" passes plugin (.so link failures for Android cross-compilation)
#add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
